--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -11,6 +11,58 @@
     .show-on-mobile{
         display: block;
     }
+    .heading__logo{
+        font-size: 2.5rem;
+    }
+    .navbar__mbtl-list{
+        width: 200px;
+        background-color: var(--white-color);
+    }
+    .navbar__mbtl-link{
+        color: var(--background-btn);
+    }
+   .heading__content-wrap{
+        margin-top:50px ;
+        margin-left: 20px;
+   }
+
+   .heading__content-header{
+        font-size: 3rem;
+        line-height: 3.4rem;
+   }
+   .heading__content-des{
+        margin-top: 12px;
+   }
+   .heading__booking-wrap{
+        margin: 60px 20px 0 20px;
+   }
+   .booking__content{
+        padding: 12px auto;
+   }
+   .booking__content-head{
+        text-align: center;
+        font-weight: 600;
+   }
+    .booking__content input{
+        width: 100%;
+        height: 48px;
+        font-size: 2.4rem;
+        text-align: center;
+    }
+    .submit-book{
+        left: -5px;
+        border-bottom-left-radius: 6px;
+        right: -338px;
+        border-top-right-radius: 0px;
+        top: 28px;
+    }
+    .book-submit-content{
+        flex-direction: row;
+    }
+    .book-submit-content span{
+        padding-left: 32px;
+        font-size: 2.8rem;
+    }
 }
 /* tablet */
 @media (min-width: 768px) and (max-width:1023px){
@@ -33,6 +85,36 @@
         top: 4px;
         left: -28px;
     }
+
+    /* === */
+    .heading__content-wrap{
+        margin-top: 200px;
+    }
+
+    .heading__content-header{
+        font-size: 3.2rem;
+    }
+
+    .heading__booking-wrap{
+        padding: 16px 8px;
+    }
+    .booking__content-head{
+        font-size: 1.4rem;
+    }
+    .submit-book{
+        top: -137px;
+        right: -428px;
+        width: 147px;
+        height: 152px;
+    }
+
+    .book-submit-content{
+        padding-left: 16px;
+    }
+    .submit-book i{
+        padding-left:-12px ;
+    }
+
 }
 
 /* Mobile + tablet */
@@ -44,4 +126,5 @@
     .show-on-tablet-mobile{
         display: block;
     }
+    
 }
