--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -130,4 +130,7 @@
         display: flex;
         justify-content: center;
     }
+    .special__offer-heading-wrap{
+        align-items: flex-start;
+    }
 }
