--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,11 +113,14 @@
     font-size: 6rem;
     font-weight: 400;
     color: var(--white-color);
+    text-shadow: 1px 2px 4px yellow;
 }
 .heading__content-des{
     color: var(--white-color);
     font-size: 2rem;
     padding: 16px 0;
+    text-shadow: 1px 1px 2px yellowgreen;
+
 }
 
 
@@ -242,6 +245,7 @@
     flex-wrap: nowrap;
     overflow-x: scroll;
     padding-bottom: 32px;
+    padding-top: 16px;
 }
 .destinations__card-wrap::-webkit-scrollbar{
     display: none;
@@ -262,7 +266,7 @@
     box-shadow: 0 2px 4px var(--background-btn);
 }
 .destinations__card:hover{
-    transform: translateY(4px);
+    transform: translateY(-8px);
     cursor: pointer;
 }
 
@@ -286,4 +290,117 @@
 
 .behavior__page-mbtl{
     display: none;
+}
+/* Special Offer */
+.special__offer{
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+.special__offer-title-wrap{
+    margin-bottom: 80px;
+}
+
+.special__offer-heading-wrap{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+.special__offer-heading-title{
+    font-size: 4.2rem;
+    font-weight: 550;
+    margin-bottom: 24px;
+}
+.special__offer-heading-content{
+    font-size: 2.4rem;
+    margin-top: 24px;
+    padding-bottom: 18px;
+}
+/* special offer Card */
+.special__offer-content-wrap{
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    padding-bottom: 32px;
+    padding-top: 16px;
+}
+.special__offer-content-wrap::-webkit-scrollbar{
+    display: none;
+}
+
+.cart__destination-buy{
+    background-color: #FFF8F1;
+    border-radius: 16px;
+    box-shadow: 0 1px 4px var(--background-btn);
+    transition: transform linear 0.3s;
+}
+
+.cart__destination-buy:hover{
+    transform: translateY(-8px);
+    cursor: pointer;
+}
+.cart__destination-buy-img{
+    height: 280px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    margin-bottom: 40px;
+}
+
+.cart__destination-buy-title{
+    font-size: 2.6rem;
+    color: #767E86;
+    padding: 0 16px;
+    margin-bottom: 8px;
+}
+.cart__destination-buy-rate-list{
+    display: flex;
+    padding: 0 16px;
+    font-size: 1.8rem;
+    margin-bottom: 24px;
+}
+.cart__destination-buy-rate-item{
+    margin-right: 8px;
+    color: #FFC107;
+}
+.cart__destination-buy-detail{
+    padding: 0 16px;
+    margin-bottom: 16px;
+    font-size: 1.6rem;
+    color: #172432;
+    line-height: 2rem;
+    height: 8rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+.cart__destination-buy-price{
+    padding-bottom: 24px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.cart__destination-buy-price span{
+    font-size: 4rem;
+    color: var(--background-btn);
+}
+.cart__destination-buy-btn{
+    height: 64px;
+    width: 160px;
+    background-color: #FF7654;
+    border-radius: 16px;
+}
+
+.cart__destination-buy-btn:hover{
+    background-color: #58eb53;
+    cursor: pointer;
+}
+
+.cart__destination-buy-btn p{
+    font-size: 3rem;
+    color: var(--white-color);
+    line-height: 6.4rem;
+    text-align: center;
 }
