--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -7,6 +7,7 @@ html{
     box-sizing: border-box;
     font-size: 62.5%;
     font-family: sans-serif;
+    scroll-behavior: smooth;
 }
 ul{
     padding-left: 0;
