--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,6 +276,7 @@
     font-weight: 500;
     color: var(--white-color);
     line-height: 3rem;
+    text-shadow: 1px 1px 2px #1dd865;
 }
 
 .destinations__card-location{
@@ -283,9 +284,10 @@
     padding-left: 48px;
     color: var(--white-color);
     line-height: 2.4rem;
+    text-shadow: 1px 1px 2px #1dd865;
 }
 .destinations__card-location i{
-    padding-right: 12px;
+    padding-right: 4px;
 }
 
 .behavior__page-mbtl{
@@ -335,7 +337,6 @@
 
 .cart__destination-buy:hover{
     transform: translateY(-8px);
-    cursor: pointer;
 }
 .cart__destination-buy-img{
     height: 280px;
@@ -404,3 +405,78 @@
     line-height: 6.4rem;
     text-align: center;
 }
+/* Our blog */
+.our__blog-wrap{
+    
+}
+.our-blog__heading{
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+.our-blog__heading-header{
+    font-size: 4.4rem;
+    font-weight: 500;
+    color: #172432;
+    margin-bottom: 16px;
+    font-family: 'Times New Roman', Times, serif;
+
+}
+.our-blog__heading-content{
+    color: #767E86;
+    font-size: 2rem;
+    margin-top: 16px;
+}
+
+.our__blog-content{
+    padding-bottom: 80px;
+}
+.our__blog-content-img{
+    height: 800px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 26px;
+    box-shadow: 0 2px 4px var(--background-btn);
+    margin-bottom: 32px;
+}
+.our__blog-content-text-block-wrap{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+}
+
+.text-block__heading{
+    font-size: 4.2rem;
+    font-weight: 400;
+    line-height: 4.8rem;
+    margin-bottom: 60px;
+    color: #172432;
+    font-family: 'Times New Roman', Times, serif;
+    
+}
+
+.text-block__content{
+    font-size: 2.2rem;
+    line-height: 3.6rem;
+    margin-bottom: 60px;
+    height: 36rem;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 10;
+    text-overflow: ellipsis;
+}
+.text-block__continue{
+    display: flex;
+    font-size: 2.4rem;
+    color: var(--background-btn);
+}
+
+.text-block__continue p{
+    margin-right: 16px;
+}
+.text-block__continue i{
+
+}
+
