--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,7 @@
     font-weight: 400;
     color: var(--white-color);
     text-shadow: 1px 2px 4px yellow;
+    font-family: 'Times New Roman', Times, serif;
 }
 .heading__content-des{
     color: var(--white-color);
@@ -201,6 +202,7 @@
     font-size: 3.4rem;
     font-weight: 400;
     padding: 16px 0 24px 0;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .destination__content{
@@ -311,6 +313,7 @@
     font-size: 4.2rem;
     font-weight: 550;
     margin-bottom: 24px;
+    font-family: 'Times New Roman', Times, serif;
 }
 .special__offer-heading-content{
     font-size: 2.4rem;
@@ -471,6 +474,7 @@
     display: flex;
     font-size: 2.4rem;
     color: var(--background-btn);
+    cursor: pointer;
 }
 
 .text-block__continue p{
@@ -480,3 +484,48 @@
 
 }
 
+/* Destination gallery */
+
+.gallery__heading{
+    margin-bottom: 80px;
+    margin-left: 12px;
+}
+.gallery__heading-title{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 4.4rem;
+    line-height: 5rem;
+    font-weight: 400;
+    color: #172432;
+    padding: 16px 0;
+}
+
+.gallery__heading-content{
+    font-size: 1.8rem;
+    color: #767E86;
+    padding: 16px 0;
+}
+
+
+.gallery__img-wrap{
+    padding: 48px 48px;
+    margin-bottom: 48px;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+}
+.gallery__img-wrap::-webkit-scrollbar{
+    display: none;
+}
+.gallery__img{
+    height: 480px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 22px;
+    box-shadow: 0px 2px 4px var(--background-btn);
+    transition: transform 0.2s;
+}
+
+.gallery__img:hover{
+    cursor: pointer;
+    transform:translateX(-4px) translateY(-12px) scale(1.1);
+}
