--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -34,3 +34,12 @@ a{
         opacity: 1;
     }
 }
+
+@keyframes growUp {
+    from{
+        scale: 0;
+    }
+    to{
+        scale: 1;
+    }
+}
