--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,6 +246,7 @@
 .destinations__card-wrap{
     flex-wrap: nowrap;
     overflow-x: scroll;
+    overflow-y:hidden;
     padding-bottom: 32px;
     padding-top: 16px;
 }
@@ -895,7 +896,7 @@
     border-radius: 16px;
     box-shadow: 0px 2px 4px var(--background-btn);
     animation: growUp ease-in-out 0.4s;
-    /* display: none; */
+    display: none;
 }
 
 .form__login{
