--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,10 +87,12 @@
     width: 250px;
     border-radius: 4px;
     box-shadow: 1px 1px 3px var(--background-btn);
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgb(194, 33, 33 );
+    z-index: 1;
     position: absolute;
     top: 100px;
     right: 10px;
+    animation: fadeIn linear 0.2s;
 }
 
 .navbar__mbtl-item
@@ -891,7 +893,7 @@
 .form__register{
     position: relative;
     width: 30vw;
-    height: 80vh;
+    height: 80vh; 
     background-color: #F5F6F7;
     border-radius: 16px;
     box-shadow: 0px 2px 4px var(--background-btn);
@@ -909,6 +911,7 @@
     animation: growUp ease-in-out 0.4s;
     display: none;
 }
+
 .modal__close-btn{
     position: absolute;
     top: 20px;
